--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,85 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+                {% load static %}
+		<title>Sample Home</title>
+                <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+                <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+	</head>
+<body>
+	<div class="container-fluid text-center">    
+	  <div class="row content">
+	    <div class="col-sm-2 sidenav">
+	      <p><a href="#">Link</a></p>
+	      <p><a href="#">Link</a></p>
+	      <p><a href="#">Link</a></p>
+	    </div>
+	    <div class="col-sm-8 text-left"> 
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		  </ol>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+		    <div class="item active">
+		      <img src="{% static 'Images/img1.jpg' %}" alt="Los Angeles" style="width:100%;">
+		      <div class="carousel-caption">
+			<h3>Los Angeles</h3>
+			<p>LA is always so much fun!</p>
+		      </div>
+		    </div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
-    </body>
+		    <div class="item">
+		      <img src="{% static 'Images/img2.jpg' %}" alt="Chicago" style="width:100%;">
+		      <div class="carousel-caption">
+			<h3>Chicago</h3>
+			<p>Thank you, Chicago!</p>
+		      </div>
+		    </div>
+		  
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+	    </div>
+	    <div class="col-sm-2 sidenav">
+                 <div class="commments_sec">
+                     {% for post in posts %}
+		        <div class="post_body">
+                            <div class="comment_header"> 
+		                 <span class="user_name">{{ post.user_name }} :</span><span class="comment">{{ post.comment|linebreaksbr }}</span>
+                            </div>
+                            <div class="comment_body">
+ 			            <span class="date">{{ post.published_date }}</span>
+                            </div>
+		        </div>
+		    {% endfor %}
+                 </div>
+                 <a href="{% url 'post_new' %}" class="btn btn-info" role="button">Add Comment</a>
+                 <form method="POST" class="post-form">{% csrf_token %}
+		        {{ form.as_p }}
+                        <button type="submit" class="save btn btn-default">Save</button>
+		 </form>
+	    </div>
+	  </div>
+	</div>
+	<footer class="container-fluid text-center">
+	  <p>Footer Text</p>
+	</footer>
+</body>
 </html>
